...
  Created by Stefan Jaindl on 28.10.18.
  Copyright © 2018 Stefan Jaindl. All rights reserved.
*/

"anonymous" = "Anonymous";
"mainMenuTitle" = "Travel Companion";
"photoDetail" = "Photo Detail";
"remember" = "Remember";
"noImageData" = "No image data available";
"imageNotSaved" = "Could not save image";
"chooseAction" = "Choose action";
"showPhoto" = "Show photo";
"delete" = "Delete";
"cancel" = "Cancel";
"addPlace" = "Add %@ Place";
"offline" = "The Internet connection appears to be offline.";
"enterPlace" = "Enter Place";
"addNote" = "Add Note";
"addTransport" = "Add %@";
"noTransportData" = "No transport data available";
"choosePlaceType" = "Choose place type";
"search" = "Search";
"attractions" = "Attractions";
"restaurants" = "Restaurants";
"hotels" = "Hotels";
"publicTransport" = "Public Transport";
"flights" = "Flights";
"flight" = "Flight";
"upcomingTrips" = "Upcoming Trips";
"pastTrips" = "Past Trips";
"addPlan" = "Add Plan";
"plan" = "Plan";
"show" = "Show";
"numberOfTrips" = "%d Trips";
"km" = "%.2f km";
"duration" = "%d hours, %d minutes";
"addPublicTransport" = "Add Public Transport";
"addRoute?" = "Do you want to add the route?";
"addRoute" = "Add route";
"addStopOrRoute?" = "Do you want to add the stop or whole route?";
"singleStop" = "Single Stop";
"wholeRoute" = "Whole route";
"flightDetail" = "≈%.2f km, %d hours, %d minutes";
"addFlight" = "Add Flight";
"addFlight?" = "Do you want to add the flight or whole leg?";
"singleFlight" = "Single flight";
"wholeLeg" = "Whole leg";
"noPage" = "No page found";
"noCountryPhotos" = "This location is not in a country. Can't fetch country photos.";
"noCountryDetails" = "This location is not in a country. Can't fetch country details.";
"errorDownloadImage" = "Could not download image";
"waitForPhotos" = "Please wait for photo downloads to finish";
...
"north" = "N";
"west" = "W";
"east" = "E";
"km²" = "km²";
"noCountryData" = "No country data available.";
"explore" = "Explore";
"showDetails" = "Show details";
"planExists" = "Plan %@ exists. Can't delete pin.";
"addTranport" = "Add %@";
"addedRoute" = "Successfully added route";
"addedPlace" = "Successfully added place";
"signOutError" = "Could not sign out";
"loginRequired" = "Login required";
"accountRequired" = "This feature requires an account. Please login.";
"signOut" = "Sign out";
"signIn" = "Sign in";
"next" = "Next";
"searchOrigin" = "Search for Origin";
"searchDestination" = "Search for Destination";
"searchPlaces" = "Search for Place";
"lodging" = "Lodging";
"restaurant" = "Restaurant";
"pointOfInterest" = "Point of interest";
"amusementPark" = "Amusement Park";
"aquarium" = "Aquarium";
"artGallery" = "Art gallery";
"atm" = "ATM";
"bank" = "Bank";
...
"yourPrivacyMatters" = "Your privacy matters. To see how your data is handled, don’t hesitate to read our open [Privacy Policy](%@).";
"logout" = "Logout";
"deleteAccount" = "Delete account";
"yesDelete" = "Yes, delete";
"pleaseWait" = "Please wait…";
"accountDeleted" = "Account deleted";
"ok" = "OK";
"yourAccountHasBeenDeleted" = "Your account has been deleted";
"doYouReallyWantToDeleteYourAccount" = "Do you really want to delete your account?";
"personalInformation" = "Personal information";
"nameAddressBirthday" = "Name, E-Mail";
"requestAccountDeletion" = "Request account deletion";
"email" = "E-Mail";
...
"planning" = "Plan";
"destination" = "Destination:";
"displayName" = "Display name:";
"startDate" = "Start Date:";
"endDate" = "End Date:";
"addTrip" = "Add Trip";
"place" = "Place";
"notav" = "Not available";
"phone" = "Phone:";
"url" = "URL:";
"type" = "Type:";
"location" = "Location";
"capital" = "Capital:";
"language" = "Language:";
"currency" = "Currency:";
"area" = "Area:";
"population" = "Population:";
"timezones" = "Timezones:";
"region" = "Regions:";
"isoCode" = "ISO code:";
"callingCodes" = "Calling codes:";
"domains" = "Domains:";
"native" = "Native name:";
"blocks" = "Regional blocks:";
"country" = "Country";
"searchRadius" = "Search radius: ";
"select" = "Select";
"distance" = "Distance: ";
"noRating" = "No rating";
"rating" = "Rating: ";
"ratings" = "ratings";
...
