...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <imageView autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" image="placeholder" id="Zc6-ra-oES">
                                                    <rect key="frame" x="20" y="0.0" width="56" height="55.666666666666664"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                <items>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="jTJ-u1-ULo"/>
                                    <barButtonItem title="Add" id="bbB-XD-b1p">
                                        <connections>
                                            <segue destination="xdo-RK-LXN" kind="show" identifier="addPlan" id="gyg-rT-ark"/>
...
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="YDu-TG-dom"/>
                                    <barButtonItem title="Hotel" image="hotel" width="50" id="Fmi-dN-1n8">
                                        <connections>
                                            <action selector="addHotel:" destination="9bi-5Y-lDi" id="GCl-7D-7vT"/>
...
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="jWH-9c-eKh"/>
                                    <barButtonItem title="Attraction" image="attraction" width="50" id="U3w-jZ-wxQ">
                                        <connections>
                                            <action selector="addAttraction:" destination="9bi-5Y-lDi" id="CBr-DQ-0p1"/>
...
                                <rect key="frame" x="8" y="52" width="464" height="906"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add notes.." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="woR-QT-mKn">
                                        <rect key="frame" x="0.0" y="0.0" width="464" height="860"/>
                                        <color key="textColor" red="0.36862745099999999" green="0.75294117650000003" blue="0.72549019609999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                </userDefinedRuntimeAttributes>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="destination name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="F3u-f4-8ar" userLabel="destination">
                                                <rect key="frame" x="0.0" y="304.66666666666669" width="464" height="34"/>
                                                <color key="textColor" red="0.0078431372550000003" green="0.80000000000000004" blue="0.72941176470000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Photos" id="aHK-3D-ZGo"/>
                    <connections>
                        <outlet property="activityIndicator" destination="EyR-ra-LYi" id="MqA-XL-fPM"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="116" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                        <state key="normal" title="Wikipedia"/>
                                        <connections>
                                            <action selector="openWikipedia:" destination="ARQ-U5-72I" eventType="touchUpInside" id="V8D-VJ-gvT"/>
...
                                        <rect key="frame" x="116" y="0.0" width="116" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                        <state key="normal" title="WikiVoyage"/>
                                        <connections>
                                            <action selector="openWikiVoyage:" destination="ARQ-U5-72I" eventType="touchUpInside" id="Ubr-OR-k3B"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T7B-0Q-6Gb" userLabel="Google">
                                        <rect key="frame" x="232" y="2" width="116" height="30"/>
                                        <state key="normal" title="Google"/>
...
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Ej-8D-BR8" userLabel="Lonelyplanet">
                                        <rect key="frame" x="348" y="2" width="116" height="30"/>
                                        <state key="normal" title="Lonelyplanet"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Info" id="141-Wz-gjd" userLabel="Info"/>
                    <connections>
                        <outlet property="googleButton" destination="T7B-0Q-6Gb" id="DGr-3Z-aBT"/>
...
